# fpa-agent

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  INSTRUCTIONS.md  LICENSE  README.md  format_sheet.py  inspect_sheet.py  pyproject.toml  requirements.txt  template_specs.md
.claude/commands/: audit.md  breakeven.md  connect.md  create.md  diff.md  explain.md  inspect.md  modify.md  scan.md  scenario.md  snapshot.md
.githooks/: pre-commit
skills/: fpa-audit.md  fpa-model.md
src/: __init__.py
src/agent/: __init__.py  core.py
src/analysis/: scan.py  snapshot.py
src/sheets/: __init__.py  auth.py  client.py  url.py
src/tools/: __init__.py  registry.py
tests/: test_claude_md.py
